Add api method for get one shedule by code
